# nrf52840-cam-remote

./: .gitignore  README.md  build.sh  nrf52_stlink.cfg  setup_env.sh  zephyr.uf2
.agent/rules/: coding-standards.md  requirements.md  testing-standards.md
.agent/skills/ble-hid/: SKILL.md
.agent/skills/ble-mesh/: SKILL.md
.agent/skills/ble-qualification/: SKILL.md
.agent/skills/gesture-engine/: SKILL.md
.agent/skills/le-audio/: SKILL.md
.agent/skills/nrf52840-peripherals/: SKILL.md
.agent/skills/nrf52840-peripherals/scripts/: nrf52840_skills.py
.agent/skills/nrf52840-power/: SKILL.md
.agent/skills/nrf52840-radio/: SKILL.md
.agent/skills/zephyr-rtos/: SKILL.md
.agent/workflows/: development.md  functional-requirements.md  maintenance.md  technical-standards.md
.github/workflows/: build.yml
app/: app.overlay  prj.conf
app/src/: hog.c  main.c
docs/: gesture_logic.md
firmware/: CMakeLists.txt  app.overlay  prj.conf
firmware/src/: battery.cpp  battery.hpp  battery_conversion.hpp  gesture_engine.hpp  hog.cpp  hog.hpp  main.cpp  profile_manager.hpp  provisioning_service.hpp
firmware/tests/: CMakeLists.txt  test_battery_conversion.cpp  test_gesture_engine.cpp  test_profile_manager.cpp
scripts/: build.env.example  build.sh  setup_env.sh  test.sh
